[tool.poetry]
name = "greff"
version = "0.0.2-alpha"
description = "rich graphql client in python"
authors = ["daniel sonbolian <dsal3389@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
