[tool.poetry]
name = "greff"
version = "0.0.5-alpha"
description = "rich graphql client in python"
authors = ["daniel sonbolian <dsal3389@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/dsal3389/greff"
keywords = ["graphql"]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.8.0"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
